--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
     <div class="container">
         <section class="hero-nav-menu">
-            <a class="logo"><img src="./imgs/logoA.webp" alt="logo"><span>antools.</span></a>
+            <h1 class="logo"><img src="./imgs/logoA.webp" alt="logo"><span>antools.</span></h1>
                 <nav class="nav-menu">
                     <a href="#">Home</a>
                     <a href="#">Categories<span><img src="./imgs/down.webp" alt="down"></span></a>
@@ -160,7 +160,7 @@
                     </div>
                 </div>
             </div>
-            <button class="load-more">Load more</button>
+            <div class="loadMoreButton"><button class="load-more">Load more</button></div>
         </div>
         </section>
 
@@ -189,70 +189,74 @@
             </div>
 
             <!-- cards -->
-            <div class="cards">
-            <div class="line3">
-                <div class="card">
-                    <div class="card-top">
-                        <img src="./imgs/zeplinIcon.webp" alt="zeplinIcon">
-                        <div class="card-headline">
-                            <h3>Zeplin</h3>
-                            <p class="free">Free & Paid</p>
-                        </div>
-                    </div>
-                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button class="visitButton">Visit</button>
-                    </div>
-                    </div>
+            <div class="cards2">
+                <div class="line3">
+                    <!-- card1 -->
                     <div class="card">
-                    <div class="card-top">
-                        <img src="./imgs/phpstormIcon.webp" alt="phpstormIcon">
-                        <div class="card-headline">
-                            <h3>PHPStorm</h3>
-                            <p class="free">Free</p>
+                        <div class="card-top">
+                            <img src="./imgs/zeplinIcon.webp" alt="zeplinIcon">
+                            <div class="card-headline">
+                                <h3>Zeplin</h3>
+                                <p class="free">Free & Paid</p>
+                            </div>
+                        </div>
+                        <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="card-icons">
+                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <button class="visitButton">Visit</button>
                         </div>
                     </div>
-                        <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button class="visitButton">Visit</button>
+
+                        <!-- card2 -->
+                    <div class="card">
+                        <div class="card-top">
+                            <img src="./imgs/phpstormIcon.webp" alt="phpstormIcon">
+                            <div class="card-headline">
+                                <h3>PHPStorm</h3>
+                                <p class="free">Free</p>
+                            </div>
+                        </div>
+                            <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="card-icons">
+                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <button class="visitButton">Visit</button>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="line4">
+                <div class="line4">
+                    <div class="card">
+                        <div class="card-top">
+                            <img src="./imgs/toolboxIcon.webp" alt="toolboxIcon">
+                            <div class="card-headline">
+                                <h3>Toolbox</h3>
+                                <p class="free">Free</p>
+                            </div>
+                        </div>
+                            <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <div class="card-icons">
+                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <button class="visitButton">Visit</button>
+                        </div>
+                    </div>
                 <div class="card">
                     <div class="card-top">
-                        <img src="./imgs/toolboxIcon.webp" alt="toolboxIcon">
-                        <div class="card-headline">
-                            <h3>Toolbox</h3>
-                            <p class="free">Free</p>
+                            <img src="./imgs/procreateIcon.webp" alt="procreateIcon">
+                            <div class="card-headline">
+                                <h3>Procreate</h3>
+                                <p class="free">Paid</p>
+                            </div>
                         </div>
-                    </div>
                         <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button class="visitButton">Visit</button>
+                        <div class="card-icons">
+                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <button class="visitButton">Visit</button>
+                        </div>
                     </div>
                 </div>
-            <div class="card">
-                    <div class="card-top">
-                        <img src="./imgs/procreateIcon.webp" alt="procreateIcon">
-                        <div class="card-headline">
-                            <h3>Procreate</h3>
-                            <p class="free">Paid</p>
-                        </div>
-                    </div>
-                    <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
-                        <button class="visitButton">Visit</button>
-                    </div>
-            </div>
             </div>
         </div>
         </section>
@@ -290,7 +294,7 @@
     <footer>
     <div class="container">
         <div class="footerColumn1">
-            <h1><span><img src="./imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
+            <h1 class="logo"><span><img src="./imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
             <h4>Copyright 2021. Antools</h4>
             <p>Antool is a web collection of information on paid or free Design and Development tools</p>
         </div>
