--- a/index.html
+++ b/index.html
@@ -167,8 +167,9 @@
         <!-- section2 -->
         <section class="trust">
         <div class="container">
+        <div class="TrustBox">
             <div class="trustBlock">
-                <h2 class="trustTitle">Trusted more than 150+ brand</h2>
+                <div class="trustTitle"><h2>Trusted more than 150+ brand</h2></div>
                 <div class="trustBrends">
                     <img src="./imgs/mikrosoftLogo.webp" alt="mikrosoftLogo">
                     <img src="./imgs/googleLogo.webp" alt="googleLogo">
@@ -177,11 +178,13 @@
                 </div>
             </div>
         </div>
+        </div>
         </section>
 
         <!-- section3 -->
         <section class="newcommerTools">
         <div class="container">
+        <div class="newcommerToolsBox">
             <div class="newcommerToolsTitle">
                 <h2>Newcomer Tools</h2>
                 <p>Wow! see the latest update of the most recommended tools from reliable designers and developers</p>
@@ -259,33 +262,39 @@
                 </div>
             </div>
         </div>
+        </div>
         </section>
 
         <!-- section4 -->
         <section class="productManager">
         <div class="container">
-
-            <img src="./imgs/back.webp" alt="back" class="arrow">
-            <img src="./imgs/ronald-richards2.webp" alt="ronald-richards" class="ronald-richards">
-            <!-- <div class="titleBoxManager">
-                <h3>Ronald Richards</h3>
-                <p>Product Manager</p>
-            </div> -->
-            <p class="aboutRichard">Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</p>
-            <img src="./imgs/next.webp" alt="next" class="arrow">
-            <img src="./imgs/pages.webp" alt="pages" class="pages">
+            <div class="ronaldRichards">
+                <div class="arrow"><img src="./imgs/back.webp" alt="back"></div>
+                <div class="ronald-richards"><img src="./imgs/ronald-richards2.webp" alt="ronald-richards" ></div>
+                <!-- <div class="titleBoxManager">
+                    <h3>Ronald Richards</h3>
+                    <p>Product Manager</p>
+                </div> -->
+                <div class="aboutRichard"><p>Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</p></div>
+                <div ><img src="./imgs/next.webp" alt="next"></div>
+            </div>
+            <div class="pages"><img src="./imgs/pages.webp" alt="pages"></div>
         </div>
         </section>
 
         <!-- section5 -->
         <section class="contributor">
         <div class="container">
-            <h2>Become a contributor?</h2>
-            <p>Join us and get tips & tricks to become a great Designer and Developer</p>
-            <div class="input">
-                <input type="text" placeholder="Enter your email...">
-                <button>Join Us</button>
+        <div class="contributorBoxMain">
+            <div class="contributorBox">
+                <div class="headlineContributor"><h2>Become a contributor?</h2></div>
+                <div class="txtContributor"><p>Join us and get tips & tricks to become a great Designer and Developer</p></div>
+                <div class="input">
+                    <input type="text" placeholder="Enter your email...">
+                    <button>Join Us</button>
+                </div>
             </div>
+        </div>
         </div>
         </section>
     </main>
@@ -293,31 +302,39 @@
         <!-- footer -->
     <footer>
     <div class="container">
+    <div class="footerAntools">
         <div class="footerColumn1">
             <h1 class="logo"><span><img src="./imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
-            <h4>Copyright 2021. Antools</h4>
-            <p>Antool is a web collection of information on paid or free Design and Development tools</p>
+            <h4 class="contactUsHeadline">Copyright 2021. Antools</h4>
+            <div class="contactUsText"><p>Antool is a web collection of information on paid or free Design and Development tools</p></div>
         </div>
 
         <div class="footerColumn2">
-            <h4>Contact Us</h4>
-            <p>+621987463</p>
-            <p>M Building, No.10 A</p>
-            <p>antools@awesome.com</p>
+            <h4 class="contactUsHeadline">Contact Us</h4>
+            <div class="contactUsText">
+                <p>+621987463</p>
+                <p>M Building, No.10 A</p>
+                <p>antools@awesome.com</p>
+            </div>
         </div>
 
         <div class="footerColumn3">
-            <h4>Categories</h4>
-            <p>Design</p>
-            <p>Development</p>
+            <h4 class="contactUsHeadline">Categories</h4>
+            <div class="contactUsText">
+                <p>Design</p>
+                <p>Development</p>
+            </div>
         </div>
 
         <div class="footerColumn4">
-            <h4>Company Info</h4>
-            <p>About Us</p>
-            <p>Our Partners</p>
-            <p>Blog</p>
+            <h4 class="contactUsHeadline">Company Info</h4>
+            <div class="contactUsText">
+                <p>About Us</p>
+                <p>Our Partners</p>
+                <p>Blog</p>
+            </div>
         </div>
+    </div>
     </div>
     </footer>
 </body>
