--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </div>
                     <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
-                        <img src="./imgs/likeColorIcon.webp" alt="likeIcon">
+                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
                         <img src="./imgs/folderIcon.webp" alt="folderIcon">
                         <button class="visitButton">Visit</button>
                     </div>
@@ -291,7 +291,7 @@
                 <div class="txtContributor"><p>Join us and get tips & tricks to become a great Designer and Developer</p></div>
                 <div class="input">
                     <input type="text" placeholder="Enter your email...">
-                    <button>Join Us</button>
+                    <button type="submit">Join Us</button>
                 </div>
             </div>
         </div>
@@ -312,26 +312,26 @@
         <div class="footerColumn2">
             <h4 class="contactUsHeadline">Contact Us</h4>
             <div class="contactUsText">
-                <p>+621987463</p>
-                <p>M Building, No.10 A</p>
-                <p>antools@awesome.com</p>
+                <a>+621987463</a>
+                <a>M Building, No.10 A</a>
+                <a>antools@awesome.com</a>
             </div>
         </div>
 
         <div class="footerColumn3">
             <h4 class="contactUsHeadline">Categories</h4>
             <div class="contactUsText">
-                <p>Design</p>
-                <p>Development</p>
+                <a>Design</a>
+                <a>Development</a>
             </div>
         </div>
 
         <div class="footerColumn4">
             <h4 class="contactUsHeadline">Company Info</h4>
             <div class="contactUsText">
-                <p>About Us</p>
-                <p>Our Partners</p>
-                <p>Blog</p>
+                <a>About Us</a>
+                <a>Our Partners</a>
+                <a>Blog</a>
             </div>
         </div>
     </div>
