--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="header-input">
                 <img src="./imgs/search.webp" alt="searchIcon">
                 <input type="text" placeholder="find more than 430+ tools...">
-                <button class="input-button">Search</button>
+                <button type="submit" class="input-button">Search</button>
             </div>
             <div class="media">
                 <img src="./imgs/facebookIcon.webp" alt="facebookIcon">
