--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <header>
     <div class="container">
         <section class="hero-nav-menu">
-            <h1 class="logo"><img src="./imgs/logoA.webp" alt="logo"><span>antools.</span></h1>
+            <h1 class="logo"><img src="./src/imgs/logoA.webp" alt="logo"><span>antools.</span></h1>
                 <nav class="nav-menu">
                     <a href="#">Home</a>
-                    <a href="#">Categories<span><img src="./imgs/down.webp" alt="down"></span></a>
+                    <a href="#">Categories<span><img src="./src/imgs/down.webp" alt="arrowDown"></span></a>
                     <a href="#">My Collections</a>
                     <a href="#">Blog</a>
                 </nav>
             <div class="buttons-nav-menu">
-                <a>Login</a>
-                <button class="nav-menu-button">Sign Up</button>
+                <button class="nav-menu-button1">Login</button>
+                <button class="nav-menu-button2">Sign Up</button>
             </div>
         </section>
         <section class="hero">
@@ -34,17 +34,17 @@
                 <p class="hero-sentence">Antool is a web collection of information on paid or free Design and Development tools</p>
             </div>
             <div class="header-input">
-                <img src="./imgs/search.webp" alt="searchIcon">
+                <img src="./src/imgs/search.webp" alt="searchIcon">
                 <input type="text" placeholder="find more than 430+ tools...">
                 <button type="submit" class="input-button">Search</button>
             </div>
             <div class="media">
-                <img src="./imgs/facebookIcon.webp" alt="facebookIcon">
-                <img src="./imgs/instagramIcon.webp" alt="instagramIcon">
-                <img src="./imgs/twitterIcon.webp" alt="twitterIcon">
+                <img src="./src/imgs/facebookIcon.webp" alt="facebookIcon">
+                <img src="./src/imgs/instagramIcon.webp" alt="instagramIcon">
+                <img src="./src/imgs/twitterIcon.webp" alt="twitterIcon">
             </div>
         </div>
-            <img src="./imgs/illustration.webp" alt="illustration" class="illustration">
+            <img src="./src/imgs/illustration.webp" alt="illustration" class="illustration">
         </section>
     </div>
     </header>
@@ -61,10 +61,10 @@
                 <p>Tools for the best Designers and Developers most popularly used in the world</p>
             </div>
             <!-- 1 -->
-            <div class="card-line1">
+            <div class="card-line">
                 <div class="card">
                     <div class="card-top">
-                        <img src="./imgs/figmaIcon.webp" alt="figmaIcon" width=64px height=64px>
+                        <img src="./src/imgs/figmaIcon.webp" alt="figmaIcon" width=64px height=64px>
                         <div class="card-headline">
                             <h3>FIGMA</h3>
                             <p class="free">Free</p>
@@ -72,15 +72,17 @@
                     </div>
                     <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <div class="icons">
+                            <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                        </div>
                         <button class="visitButton">Visit</button>
                     </div>
                 </div>
                 <!-- 2 -->
                 <div class="card">
                     <div class="card-top">
-                        <img src="./imgs/logos_sketch.webp" alt="sketchIcon">
+                        <img src="./src/imgs/logos_sketch.webp" alt="sketchIcon">
                         <div class="card-headline">
                             <h3>Sketch</h3>
                             <p class="free">Trial & Paid</p>
@@ -88,8 +90,10 @@
                     </div>
                     <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <div class="icons">
+                            <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                        </div>
                         <button class="visitButton">Visit</button>
                     </div>
                 </div>
@@ -104,17 +108,19 @@
                     </div>
                     <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <div class="icons">
+                            <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                        </div>
                         <button class="visitButton">Visit</button>
                     </div>
                 </div>
             </div>
             <!-- 4 -->
-            <div class="card-line2">
+            <div class="card-line">
                 <div class="card">
                     <div class="card-top">
-                        <img src="./imgs/notion.webp" alt="notionIcon">
+                        <img src="./src/imgs/notion.webp" alt="notionIcon">
                         <div class="card-headline">
                             <h3>Notion</h3>
                             <p class="free">Free & Paid</p>
@@ -122,15 +128,17 @@
                     </div>
                     <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <div class="icons">
+                            <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                        </div>
                         <button class="visitButton">Visit</button>
                     </div>
                 </div>
                 <!-- 5 -->
                 <div class="card">
                     <div class="card-top">
-                        <img src="./imgs/grommet-icons_slack.webp" alt="slackIcon">
+                        <img src="./src/imgs/grommet-icons_slack.webp" alt="slackIcon">
                         <div class="card-headline">
                             <h3>Slack</h3>
                             <p class="free">Free & Paid</p>
@@ -138,15 +146,17 @@
                     </div>
                     <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <div class="icons">
+                            <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                        </div>
                         <button class="visitButton">Visit</button>
                     </div>
                 </div>
                 <!-- 6 -->
                 <div class="card">
                     <div class="card-top">
-                        <img src="./imgs/logos_invision-icon.webp" alt="invisionIcon">
+                        <img src="./src/imgs/logos_invision-icon.webp" alt="invisionIcon">
                         <div class="card-headline">
                             <h3>Invision</h3>
                             <p class="free">Free & Paid</p>
@@ -154,8 +164,10 @@
                     </div>
                     <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                     <div class="card-icons">
-                        <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                        <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                        <div class="icons">
+                            <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                            <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                        </div>
                         <button class="visitButton">Visit</button>
                     </div>
                 </div>
@@ -171,10 +183,10 @@
             <div class="trustBlock">
                 <div class="trustTitle"><h2>Trusted more than 150+ brand</h2></div>
                 <div class="trustBrends">
-                    <img src="./imgs/mikrosoftLogo.webp" alt="mikrosoftLogo">
-                    <img src="./imgs/googleLogo.webp" alt="googleLogo">
-                    <img src="./imgs/slackLogo.webp" alt="slackLogo">
-                    <img src="./imgs/wordpressLogo.webp" alt="wordpressLogo">
+                    <img src="./src/imgs/mikrosoftLogo.webp" alt="mikrosoftLogo">
+                    <img src="./src/imgs/googleLogo.webp" alt="googleLogo">
+                    <img src="./src/imgs/slackLogo.webp" alt="slackLogo">
+                    <img src="./src/imgs/wordpressLogo.webp" alt="wordpressLogo">
                 </div>
             </div>
         </div>
@@ -197,7 +209,7 @@
                     <!-- card1 -->
                     <div class="card">
                         <div class="card-top">
-                            <img src="./imgs/zeplinIcon.webp" alt="zeplinIcon">
+                            <img src="./src/imgs/zeplinIcon.webp" alt="zeplinIcon">
                             <div class="card-headline">
                                 <h3>Zeplin</h3>
                                 <p class="free">Free & Paid</p>
@@ -205,8 +217,10 @@
                         </div>
                         <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="card-icons">
-                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <div class="icons">
+                                <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                                <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                            </div>
                             <button class="visitButton">Visit</button>
                         </div>
                     </div>
@@ -214,7 +228,7 @@
                         <!-- card2 -->
                     <div class="card">
                         <div class="card-top">
-                            <img src="./imgs/phpstormIcon.webp" alt="phpstormIcon">
+                            <img src="./src/imgs/phpstormIcon.webp" alt="phpstormIcon">
                             <div class="card-headline">
                                 <h3>PHPStorm</h3>
                                 <p class="free">Free</p>
@@ -222,8 +236,10 @@
                         </div>
                             <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="card-icons">
-                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <div class="icons">
+                                <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                                <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                            </div>
                             <button class="visitButton">Visit</button>
                         </div>
                     </div>
@@ -231,7 +247,7 @@
                 <div class="line4">
                     <div class="card">
                         <div class="card-top">
-                            <img src="./imgs/toolboxIcon.webp" alt="toolboxIcon">
+                            <img src="./src/imgs/toolboxIcon.webp" alt="toolboxIcon">
                             <div class="card-headline">
                                 <h3>Toolbox</h3>
                                 <p class="free">Free</p>
@@ -239,14 +255,16 @@
                         </div>
                             <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="card-icons">
-                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <div class="icons">
+                                <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                                <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                            </div>
                             <button class="visitButton">Visit</button>
                         </div>
                     </div>
                 <div class="card">
                     <div class="card-top">
-                            <img src="./imgs/procreateIcon.webp" alt="procreateIcon">
+                            <img src="./src/imgs/procreateIcon.webp" alt="procreateIcon">
                             <div class="card-headline">
                                 <h3>Procreate</h3>
                                 <p class="free">Paid</p>
@@ -254,8 +272,10 @@
                         </div>
                         <p class="card-info">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="card-icons">
-                            <img src="./imgs/likeIcon.webp" alt="likeIcon">
-                            <img src="./imgs/folderIcon.webp" alt="folderIcon">
+                            <div class="icons">
+                                <img src="./src/imgs/likeIcon.webp" alt="likeIcon">
+                                <img src="./src/imgs/folderIcon.webp" alt="folderIcon">
+                            </div>
                             <button class="visitButton">Visit</button>
                         </div>
                     </div>
@@ -269,16 +289,16 @@
         <section class="productManager">
         <div class="container">
             <div class="ronaldRichards">
-                <div class="arrow"><img src="./imgs/back.webp" alt="back"></div>
-                <div class="ronald-richards"><img src="./imgs/ronald-richards2.webp" alt="ronald-richards" ></div>
+                <div class="arrow"><img src="./src/imgs/back.webp" alt="back"></div>
+                <div class="ronald-richards"><img src="./src/imgs/ronald-richards2.webp" alt="ronald-richards" ></div>
                 <!-- <div class="titleBoxManager">
                     <h3>Ronald Richards</h3>
                     <p>Product Manager</p>
                 </div> -->
                 <div class="aboutRichard"><p>Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</p></div>
-                <div ><img src="./imgs/next.webp" alt="next"></div>
+                <div ><img src="./src/imgs/next.webp" alt="next"></div>
             </div>
-            <div class="pages"><img src="./imgs/pages.webp" alt="pages"></div>
+            <div class="pages"><img src="./src/imgs/pages.webp" alt="pages"></div>
         </div>
         </section>
 
@@ -298,13 +318,13 @@
         </div>
         </section>
     </main>
-    <hr class="line">
+    <div class="line"></div>
         <!-- footer -->
     <footer>
     <div class="container">
     <div class="footerAntools">
         <div class="footerColumn1">
-            <h1 class="logo"><span><img src="./imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
+            <h1 class="logo"><span><img src="./src/imgs/antoolsColorIcon.webp" alt="antoolsColorIcon"></span>antools.</h1>
             <h4 class="contactUsHeadline">Copyright 2021. Antools</h4>
             <div class="contactUsText"><p>Antool is a web collection of information on paid or free Design and Development tools</p></div>
         </div>
@@ -312,26 +332,26 @@
         <div class="footerColumn2">
             <h4 class="contactUsHeadline">Contact Us</h4>
             <div class="contactUsText">
-                <a>+621987463</a>
-                <a>M Building, No.10 A</a>
-                <a>antools@awesome.com</a>
+                <a href="#">+621987463</a>
+                <a href="#">M Building, No.10 A</a>
+                <a href="#">antools@awesome.com</a>
             </div>
         </div>
 
         <div class="footerColumn3">
             <h4 class="contactUsHeadline">Categories</h4>
             <div class="contactUsText">
-                <a>Design</a>
-                <a>Development</a>
+                <a href="#">Design</a>
+                <a href="#">Development</a>
             </div>
         </div>
 
         <div class="footerColumn4">
             <h4 class="contactUsHeadline">Company Info</h4>
             <div class="contactUsText">
-                <a>About Us</a>
-                <a>Our Partners</a>
-                <a>Blog</a>
+                <a href="#">About Us</a>
+                <a href="#">Our Partners</a>
+                <a href="#">Blog</a>
             </div>
         </div>
     </div>
